Add document annotation features and AWS integration

--- a/.env
+++ b/.env
@@ -7,3 +7,12 @@ REPLIT_AUTH_CLIENT_ID=development-client-id
 REPLIT_AUTH_CLIENT_SECRET=development-client-secret
 SESSION_SECRET=development-session-secret
 REPL_ID=development-repl-id
+
+# AWS S3 Configuration for Document Storage
+AWS_REGION=us-east-2
+AWS_BUCKET_NAME=builderos-pm-documents
+AWS_ACCESS_KEY_ID=your-access-key-here
+AWS_SECRET_ACCESS_KEY=your-secret-key-here
+
+# App URL (will be set automatically in Replit)
+APP_URL=$REPL_SLUG.$REPL_OWNER.repl.co
