--- a/package.json
+++ b/package.json
@@ -92,17 +92,18 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pdf-lib": "^1.17.1",
-    "qrcode.react": "^4.2.0",
+    "pdfjs-dist": "^3.11.174",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
-    "react-pdf": "^10.1.0",
+    "react-pdf": "^7.6.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
-    "signature_pad": "^5.1.0",
+    "signature_pad": "^4.1.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
