--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ AWS_SECRET_ACCESS_KEY=your-secret-key-here
 
 # App URL (will be set automatically in Replit)
 APP_URL=$REPL_SLUG.$REPL_OWNER.repl.co
+
+# Gemini API Configuration
+GEMINI_API_KEY=AIzaSyDMpjFTQ-HbdVTb-Ot-QN6PpjnAwICiSLM
