--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@react-oauth/google": "^0.12.2",
     "@react-pdf/renderer": "^4.3.0",
+    "react-pdf": "^7.7.1",
+    "qrcode.react": "^3.1.0",
+    "signature_pad": "^4.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
